<resources>
    <string name="app_name">Notes</string>
    <string name="priority_3">3</string>
    <string name="priority_2">2</string>
    <string name="priority_1">1</string>
    <string name="add_note">Add note</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter Description</string>
    <string name="day_of_week">Day of week is :</string>
    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>